--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -4,16 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-
-    "start":"nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -26,7 +25,4 @@
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0"
   }
-
-
-
 }
